src/test/ui/const-generics/min_const_generics/feature-gate-min_const_generics.rs
fn test<const N: usize>() {}
//~^ ERROR const generics are unstable

fn main() {}
